--- a/styling.css
+++ b/styling.css
@@ -2,38 +2,39 @@
 input {
   z-index: 1;
   position: relative;
-  margin: 0 10px; /* bah bah */
+  margin: 0 1em;
   width: 4.5em;
   height: 2.5em;
-  border-radius: 25px; /* bah bah */
-  background: #999;
+  border-radius: 2.5em;
+  background: #96dcee;
   outline: 0;
   appearance: none;
   cursor: pointer;
 }
 
 /* rondje in de switch */
-input:after {
+input:before {
   content: "";
   position: absolute;
-  /*top: 4px; /* bah bah */
-  /*left: 2px; /* bah bah */
-  top:.25em;
-  left:.25em;
+  top: 0.25em;
+  left: 0.25em;
   display: block;
   height: 2em;
   width: 2em;
   border-radius: 50%;
-  background: #eee;
-  transition: .25s ease-out;
+  background: #fffaa8;
+  transition: 0.25s ease-out;
 }
 
 input:checked {
   background-color: rgb(36, 75, 107);
 }
 
-input:checked:after {
+/* rondje in de switch bij nacht */
+input:checked:before {
+  content: "";
   transform: translateX(100%);
+  background: #e1dbd6;
 }
 
 /* container */
@@ -79,29 +80,15 @@ form:not(:valid) ~ section > div:nth-of-type(1):before {
 form:has(:checked) ~ section > div:nth-of-type(1) {
   position: absolute;
   width: 100%;
-  height: 65%;
+  height: 100%;
   top: 0;
   left: 0;
   background-image: linear-gradient(
     0deg,
-    hsl(207deg 58% 40%) 4%,
-    hsl(210deg 63% 37%) 9%,
-    hsl(213deg 69% 35%) 15%,
-    hsl(216deg 80% 32%) 21%,
-    hsl(215deg 98% 27%) 28%,
-    hsl(215deg 96% 25%) 35%,
-    hsl(214deg 94% 23%) 42%,
-    hsl(212deg 91% 20%) 49%,
-    hsl(208deg 88% 16%) 56%,
-    hsl(210deg 89% 16%) 63%,
-    hsl(213deg 91% 15%) 70%,
-    hsl(216deg 93% 15%) 76%,
-    hsl(220deg 96% 15%) 82%,
-    hsl(220deg 98% 14%) 87%,
-    hsl(218deg 97% 13%) 91%,
-    hsl(215deg 95% 13%) 95%,
-    hsl(211deg 94% 12%) 98%,
-    hsl(206deg 93% 11%) 100%
+    rgba(61, 123, 171, 1) 2%,
+    rgba(49, 87, 145, 1) 29%,
+    rgba(2, 39, 111, 1) 50%,
+    rgba(4, 12, 42, 1) 100%
   );
 }
 
@@ -134,43 +121,51 @@ form:has(:checked) ~ section > div:nth-of-type(1) > div:nth-child(1) {
     #e1dbd6 35%,
     transparent 55%
   );
+  filter: blur(0.2em);
 }
 
-/* TODO sterren */
-/* section div:nth-of-type(1) div:nth-child(2):before{
-    content: "";
-    position: absolute;
-    width: inherit;
-    height: 50%;
-    top: 0;
-    left: 0;
-    background: radial-gradient(#fff 8%, transparent 5%);
-    background-position: top left, 5px 23px;
-    background-size: 30px 30px;
-    border-radius: 50%;
-    opacity: 1;
-    transform: skew(20deg);
-  } */
+/* maan weerspiegeling */
+form:has(:checked)
+  ~ section
+  > div:nth-of-type(1)
+  > div:nth-child(1)
+  div:nth-child(1) {
+  position: relative;
+  width: 10em;
+  height: 10em;
+  top: 38em;
+  left: 10%;
+  /* bottom: 50%; */
+  background: radial-gradient(
+    circle,
+    #c2bfba 20%,
+    #e1dbd6 35%,
+    transparent 55%
+  );
+  filter: blur(0.2em);
+}
 
 /* oceaan bij nacht*/
-form:has(:checked) ~ section:nth-of-type(1) > div:last-of-type {
+form:has(:checked) ~ section:nth-of-type(1) div:nth-of-type(2) {
   position: absolute;
   width: 100%;
   height: 25%;
   bottom: 0;
   left: 0;
-  background: conic-gradient(
-    from 90deg at 50% 150%,
-    #589bce,
-    #055ca7,
-    #052b4c,
-    #003b90,
-    #00174a
+  background: linear-gradient(
+    90deg,
+    rgba(4, 12, 42, 1) 0%,
+    rgba(2, 39, 111, 1) 19%,
+    rgba(49, 87, 145, 1) 41%,
+    rgba(60, 95, 148, 1) 50%,
+    rgba(49, 87, 145, 1) 57%,
+    rgba(2, 39, 111, 1) 84%,
+    rgba(4, 12, 42, 1) 100%
   );
 }
 
 /* oceaan bij dag*/
-form:not(:valid) ~ section:nth-of-type(1) > div:last-of-type {
+form:not(:valid) ~ section:nth-of-type(1) div:nth-of-type(2) {
   position: absolute;
   width: 100%;
   height: 25%;
@@ -222,16 +217,16 @@ svg g rect {
   fill: var(--treeTrunk);
 }
 
-li{
+li {
   list-style: none;
 }
 
-/* vuurwerk */
+/* vuurwerk 1 */
 form:has(:checked) ~ section:nth-of-type(1) div:nth-of-type(1) ul {
   position: absolute;
 }
 
-form:has(:checked) ~ section:nth-of-type(1) ul li {
+form:has(:checked) ~ section:nth-of-type(1) div:nth-of-type(1) div:nth-of-type(2) ul li {
   position: absolute;
   left: 0vw;
   bottom: 20vw;
@@ -264,7 +259,7 @@ form:has(:checked) ~ section:nth-of-type(1) ul li:nth-child(7) {
   transform: rotate(180deg) translateY(-1vw);
 }
 form:has(:checked) ~ section:nth-of-type(1) ul li:nth-child(8) {
-  transform: rotate(210deg) translateY(-1vw);;
+  transform: rotate(210deg) translateY(-1vw);
 }
 form:has(:checked) ~ section:nth-of-type(1) ul li:nth-child(9) {
   transform: rotate(240deg) translateY(-1vw);
@@ -282,7 +277,24 @@ form:has(:checked) ~ section:nth-of-type(1) ul li:nth-child(12) {
   transform: rotate(360deg) translateY(-1vw);
 }
 
-form:has(:checked) ~ section:nth-of-type(1) ul li:before {
+form:has(:checked)
+  ~ section:nth-of-type(1)
+  div:nth-of-type(1)
+  div:nth-of-type(2)
+  ul
+  li:before,
+form:has(:checked)
+  ~ section:nth-of-type(1)
+  div:nth-of-type(1)
+  div:nth-of-type(3)
+  ul
+  li:before,
+form:has(:checked)
+  ~ section:nth-of-type(1)
+  div:nth-of-type(1)
+  div:nth-of-type(4)
+  ul
+  li:before {
   content: "";
   position: absolute;
   top: 100%;
@@ -304,66 +316,444 @@ form:has(:checked) ~ section:nth-of-type(1) ul li:before {
   }
 }
 
-form:has(:checked) ~ section:nth-of-type(1) ul:nth-of-type(1) {
+form:has(:checked)
+  ~ section:nth-of-type(1)
+  div:nth-of-type(1)
+  div
+  ul:nth-of-type(1) {
   left: 40%;
   top: 30%;
   /* transform: scale(1); */
 }
 
-form:has(:checked) ~ section:nth-of-type(1) ul:nth-of-type(1) li:before {
+form:has(:checked)
+  ~ section:nth-of-type(1)
+  div:nth-of-type(1)
+  div:nth-of-type(2)
+  ul:nth-of-type(1)
+  li:before {
   animation: vuurwerk 1.75s ease-in-out infinite;
   animation-delay: 1.75s;
 }
 
-form:has(:checked) ~ section:nth-of-type(1) ul:nth-of-type(1) li:nth-of-type(2n):before {
+/* elk even li is rood */
+form:has(:checked)
+  ~ section:nth-of-type(1)
+  div:nth-of-type(1)
+  div:nth-of-type(2)
+  ul:nth-of-type(1)
+  li:nth-of-type(2n):before {
   background-color: red;
 }
 
-form:has(:checked) ~ section:nth-of-type(1) div:nth-of-type(1) > div:nth-of-type(2){
+form:has(:checked)
+  ~ section:nth-of-type(1)
+  div:nth-of-type(1)
+  > div:nth-of-type(2) {
   position: absolute;
   background-color: rgb(255, 0, 0);
-	width: 0.25vw;
-	border-radius: 25%;
-	height: 0.5vw;
-	bottom: -8vw;
-	left: -2.5vw;
-	opacity: 0;
-	animation: omhoog 1.75s ease-in-out infinite;
-	animation-delay: 0.1s;
+  width: 0.25vw;
+  height: 0.5vw;
+  border-radius: 25%;
+  bottom: 1vw;
+  left: -3vw;
+  opacity: 0;
+  animation: omhoog 1.75s ease-in-out infinite;
+  animation-delay: 0.1s;
 }
 
 @keyframes omhoog {
-	0%,
-	45% {
-		transform: translate(20vw, -10vw);
-		opacity: 100%;
-	}
-	95% {
-		transform: translate(20vw, -30vw);
-		opacity: 100%;
-	}
-	96%,
-	100% {
-		transform: translate(20vw, -30vw);
-		opacity: 0%;
-	}
+  0%,
+  45% {
+    transform: translate(20vw, -10vw);
+    opacity: 100%;
+  }
+  95% {
+    transform: translate(20vw, -30vw);
+    opacity: 100%;
+  }
+  96%,
+  100% {
+    transform: translate(20vw, -30vw);
+    opacity: 0%;
+  }
 }
 
-/* form:has(:checked) ~ section:nth-of-type(1)  {
+/* vuurwerk 2 */
+form:has(:checked)
+  ~ section:nth-of-type(1)
+  div:nth-of-type(1)
+  div:nth-of-type(3) {
+  position: absolute;
+  width: 0.25vw;
+  height: 0.5vw;
+  bottom: 10vw;
+  left: 30vw;
+  border-radius: 25%;
+  background-color: gold;
+  animation: omhoog 1.75s ease-in-out infinite;
+  animation-delay: 0.7s;
+}
+
+form:has(:checked)
+  ~ section:nth-of-type(1)
+  div:nth-of-type(1)
+  div:nth-of-type(3)
+  ul
+  li {
+  position: absolute;
+  left: 0vw;
+  bottom: 20vw;
+  width: 0.2vw;
+  height: 5vw;
+  transform-origin: 50% 80%;
+  overflow: hidden;
+}
+
+form:has(:checked)
+  ~ section:nth-of-type(1)
+  div:nth-of-type(1)
+  div:nth-of-type(3)
+  ul
+  li:before {
+  /* position: absolute; */
+  animation: vuurwerk 1.75s ease-in-out infinite;
+  animation-delay: 0.7s;
+}
+
+/* elk even li is #ffc93c */
+form:has(:checked)
+  ~ section:nth-of-type(1)
+  div:nth-of-type(1)
+  div:nth-of-type(3)
+  ul:nth-of-type(1)
+  li:nth-of-type(2n):before {
+  background-color: #155263;
+}
+
+/* vuurwerk 3 */
+form:has(:checked)
+  ~ section:nth-of-type(1)
+  div:nth-of-type(1)
+  div:nth-of-type(4) {
+  position: absolute;
+  width: 0.25vw;
+  height: 0.5vw;
+  bottom: 11vw;
+  left: 63vw;
+  border-radius: 25%;
+  background-color: pink;
+  animation: omhoog 1.75s ease-in-out infinite;
+  animation-delay: 0.1s;
+}
+
+form:has(:checked)
+  ~ section:nth-of-type(1)
+  div:nth-of-type(1)
+  div:nth-of-type(4)
+  ul
+  li {
+  position: absolute;
+  left: 0vw;
+  bottom: 20vw;
+  width: 0.2vw;
+  height: 5vw;
+  transform-origin: 50% 80%;
+  overflow: hidden;
+}
+
+/* elk even li is pink */
+form:has(:checked)
+  ~ section:nth-of-type(1)
+  div:nth-of-type(1)
+  div:nth-of-type(4)
+  ul:nth-of-type(1)
+  li:nth-of-type(2n):before {
+  background-color: pink;
+}
+
+form:has(:checked)
+  ~ section:nth-of-type(1)
+  div:nth-of-type(1)
+  div:nth-of-type(4)
+  ul
+  li:before {
+    animation: vuurwerk 1.75s ease-in-out infinite;
+    animation-delay: 1.75s;
+}
+
+/* -------------------------------------- */
+/* vuurwerk 1 weerspiegeling */
+form:has(:checked) ~ section:nth-of-type(1) div:nth-of-type(1) div:nth-of-type(5) ul {
+  position: absolute;
+}
+
+form:has(:checked) ~ section:nth-of-type(1) div:nth-of-type(1) div:nth-of-type(5) ul li {
+  position: absolute;
+  left: 0vw;
+  bottom: -10vw;
+  width: 0.2vw;
+  height: 2vw;
+  transform-origin: 50% 80%;
+  list-style: none;
+  overflow: hidden;
+}
+
+form:has(:checked) ~ section:nth-of-type(1) div:nth-of-type(1) div:nth-of-type(5) ul li:nth-child(1) {
+  transform: rotate(0deg) translateY(-1vw);
+}
+form:has(:checked) ~ section:nth-of-type(1) div:nth-of-type(1) div:nth-of-type(5) ul li:nth-child(2) {
+  transform: rotate(30deg) translateY(-1vw);
+}
+form:has(:checked) ~ section:nth-of-type(1) div:nth-of-type(1) div:nth-of-type(5) ul li:nth-child(3) {
+  transform: rotate(60deg) translateY(-1vw);
+}
+form:has(:checked) ~ section:nth-of-type(1) div:nth-of-type(1) div:nth-of-type(5) ul li:nth-child(4) {
+  transform: rotate(90deg) translateY(-1vw);
+}
+form:has(:checked) ~ section:nth-of-type(1) div:nth-of-type(1) div:nth-of-type(5) ul li:nth-child(5) {
+  transform: rotate(120deg) translateY(-1vw);
+}
+form:has(:checked) ~ section:nth-of-type(1) div:nth-of-type(1) div:nth-of-type(5) ul li:nth-child(6) {
+  transform: rotate(150deg) translateY(-1vw);
+}
+form:has(:checked) ~ section:nth-of-type(1) div:nth-of-type(1) div:nth-of-type(5) ul li:nth-child(7) {
+  transform: rotate(180deg) translateY(-1vw);
+}
+form:has(:checked) ~ section:nth-of-type(1) div:nth-of-type(1) div:nth-of-type(5) ul li:nth-child(8) {
+  transform: rotate(210deg) translateY(-1vw);
+}
+form:has(:checked) ~ section:nth-of-type(1) div:nth-of-type(1) div:nth-of-type(5) ul li:nth-child(9) {
+  transform: rotate(240deg) translateY(-1vw);
+}
+form:has(:checked) ~ section:nth-of-type(1) div:nth-of-type(1) div:nth-of-type(5) ul li:nth-child(10) {
+  transform: rotate(270deg) translateY(-1vw);
+}
+form:has(:checked) ~ section:nth-of-type(1) div:nth-of-type(1) div:nth-of-type(5) ul li:nth-child(1) {
+  transform: rotate(300deg) translateY(-1vw);
+}
+form:has(:checked) ~ section:nth-of-type(1) div:nth-of-type(1) div:nth-of-type(5) ul li:nth-child(11) {
+  transform: rotate(330deg) translateY(-1vw);
+}
+form:has(:checked) ~ section:nth-of-type(1) div:nth-of-type(1) div:nth-of-type(5) ul li:nth-child(12) {
+  transform: rotate(360deg) translateY(-1vw);
+}
+
+form:has(:checked)
+  ~ section:nth-of-type(1)
+  div:nth-of-type(1)
+  div:nth-of-type(5)
+  ul
+  li:before{
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 0;
+  right: 0;
+  height: 2.8vw;
+  background-color: gold;
+}
+
+@keyframes weerspiegeling {
+  0% {
+    top: 100%;
+    opacity: 100%;
+  }
+  40%,
+  100% {
+    top: -60%;
+    opacity: 50%;
+  }
+}
+
+form:has(:checked)
+  ~ section:nth-of-type(1)
+  div:nth-of-type(1)
+  div
+  ul:nth-of-type(1) {
   left: 40%;
-  top: 45%;
-  transform: scale(.7);
-}
-form:has(:checked) ~ section:nth-of-type(1) ul:nth-of-type(2) li:before {
-  animation: vuurwerk 3s 2s ease-in-out infinite;
+  top: 30%;
+  /* transform: scale(1); */
 }
 
-form:has(:checked) ~ section:nth-of-type(1) ul:nth-of-type(3) {
-  left: 50%;
-  top: 65%;
-  transform: scale(.4);
+form:has(:checked)
+  ~ section:nth-of-type(1)
+  div:nth-of-type(1)
+  div:nth-of-type(5)
+  ul:nth-of-type(1)
+  li:before {
+  animation: weerspiegeling 1.75s ease-in-out infinite;
+  animation-delay: 1.75s;
 }
-form:has(:checked) ~ section:nth-of-type(1) ul:nth-of-type(3) li:before {
-  animation: vuurwerk 2s 4s ease-in-out infinite;
+
+/* elk even li is rood */
+form:has(:checked)
+  ~ section:nth-of-type(1)
+  div:nth-of-type(1)
+  div:nth-of-type(5)
+  ul:nth-of-type(1)
+  li:nth-of-type(2n):before {
+  background-color: red;
 }
- */
+
+form:has(:checked)
+  ~ section:nth-of-type(1)
+  div:nth-of-type(1)
+  > div:nth-of-type(5) {
+  position: absolute;
+  background-color: gold;
+  width: 0.2vw;
+  height: 0.1vw;
+  border-radius: 25%;
+  bottom: 25vw;
+  left: -3vw;
+  opacity: 0;
+  animation: omlaag 1.75s ease-in-out infinite;
+  animation-delay: 0.1s;
+  z-index: 1;
+  filter: blur(0.2em);
+}
+
+@keyframes omlaag {
+  0%,
+  45% {
+    transform: translate(20vw, 5.5vw);
+    opacity: 100%;
+  }
+  100% {
+    transform: translate(20vw, 15vw);
+    opacity: 100%;
+  }
+  96%,
+  100% {
+    transform: translate(20vw, 15vw);
+    opacity: 0%;
+  }
+}
+
+
+/* --------------------------------------------- */
+/* weerspiegeling vuurwerk 2 */
+form:has(:checked)
+  ~ section:nth-of-type(1)
+  div:nth-of-type(1)
+  div:nth-of-type(6) {
+  position: absolute;
+  width: 0.25vw;
+  height: 0.5vw;
+  bottom: 10vw;
+  left: 30vw;
+  border-radius: 25%;
+  /* background-color: gold; */
+  animation: omlaag 1.75s ease infinite;
+  animation-delay: 1.75s;
+  z-index: 1;
+  filter: blur(0.2em);
+}
+
+form:has(:checked)
+  ~ section:nth-of-type(1)
+  div:nth-of-type(1)
+  div:nth-of-type(6)
+  ul
+  li {
+  position: absolute;
+  left: 0vw;
+  bottom: 0;
+  width: 0.2vw;
+  height: 2vw;
+  transform-origin: 50% 80%;
+  /* overflow: hidden; */
+}
+
+form:has(:checked)
+  ~ section:nth-of-type(1)
+  div:nth-of-type(1)
+  div:nth-of-type(6)
+  ul
+  li:before {
+  animation: weerspiegeling 1.75s ease-out infinite;
+  animation-delay: 0.7s;
+  content: "";
+    position: absolute;
+    top: 100%;
+    left: 0;
+    right: 0;
+    height: 2.8vw;
+    background-color: gold;
+}
+
+/* elk even li is #ffc93c */
+form:has(:checked)
+  ~ section:nth-of-type(1)
+  div:nth-of-type(1)
+  div:nth-of-type(6)
+  ul:nth-of-type(1)
+  li:nth-of-type(2n):before {
+  background-color: #155263;
+}
+
+
+/* ------------------------------ */
+/* weerspiegeling vuurwerk 3 */
+form:has(:checked)
+  ~ section:nth-of-type(1)
+  div:nth-of-type(1)
+  div:nth-of-type(7) {
+  position: absolute;
+  /* width: 0.25vw;
+  height: 0.5vw; */
+  bottom: 11vw;
+  left: 63vw;
+  /* border-radius: 25%; */
+  background-color: pink;
+  animation: omlaag 1.75s ease-in-out infinite;
+  animation-delay: 0.1s;
+  z-index: 1;
+  filter: blur(0.2em);
+}
+
+form:has(:checked)
+  ~ section:nth-of-type(1)
+  div:nth-of-type(1)
+  div:nth-of-type(7)
+  ul
+  li {
+  position: absolute;
+  left: 0vw;
+  bottom: 10vw;
+  width: 0.2vw;
+  height: 2vw;
+  transform-origin: 50% 80%;
+  /* overflow: hidden; */
+}
+
+/* elk even li is pink */
+form:has(:checked)
+  ~ section:nth-of-type(1)
+  div:nth-of-type(1)
+  div:nth-of-type(7)
+  ul:nth-of-type(1)
+  li:nth-of-type(2n):before {
+  background-color: pink;
+}
+form:has(:checked) ~ section:nth-of-type(1) div:nth-of-type(1) div:nth-of-type(7) ul li:before {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 0;
+  right: 0;
+  height: 2.8vw;
+  background-color: gold;
+}
+
+form:has(:checked)
+  ~ section:nth-of-type(1)
+  div:nth-of-type(1)
+  div:nth-of-type(7)
+  ul
+  li:before {
+    animation: weerspiegeling 1.75s ease-in-out infinite;
+    animation-delay: 1.75s;
+}
+
